Bug 1456590 Part 1: Omit line names from implicitly named areas, to avoid confusion. r=mats

MozReview-Commit-ID: 3vK2MUeEuqw